# cloude

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  ip_allocations.json
.github/workflows/: check.yml
agent/: Cargo.toml  README.md
agent/examples/: hello.js  hello.py
agent/scripts/: fetch-kernel.sh
agent/src/: lib.rs  main.rs  qemu.rs  serial.rs
agent/src/builder/: image.rs  init.rs  mod.rs
agent/src/runtimes/: c.rs  cpp.rs  go.rs  java.rs  mod.rs  node.rs  python.rs  rust.rs
backend/: .env.exemple  .gitignore  Cargo.toml  README.md  init.sh
backend/config/: languages.json
backend/src/: initramfs_manager.rs  ip_manager.rs  lib.rs  main.rs  network.rs  vm_lifecycle.rs  vm_manager.rs
backend/virt/: Cargo.toml
backend/virt/src/: lib.rs  network.rs  provision.rs
cli/: Cargo.toml  README.md
cli/examples/: mock_backend.rs
cli/src/: main.rs
cloude-vmm/: Cargo.toml  README.md
cloude-vmm/src/: main.rs
docs/: agent.md  architecture.md  backend.md  cli.md  environment.md  vmm.md
lumper/: Cargo.toml
vmm/: Cargo.toml  README.md
vmm/src/: epoll_context.rs  irq_allocator.rs  kernel.rs  lib.rs
vmm/src/cpu/: mod.rs  mpspec.rs
vmm/src/devices/: mod.rs  serial.rs  stdin.rs  tap.rs  virtio_net.rs
vmm/src/devices/virtio/: mod.rs
vmm/src/devices/virtio/net/: device.rs  mod.rs  queue_handler.rs  simple_handler.rs  tap.rs
vmm/src/vmm/src/cpu/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
