[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
virt = { path = "./virt" }
log = "0.4.29"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
initramfs-builder = "0.2.1"

[dev-dependencies]
tempfile = "3.10"
