[package]
name = "vmm"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[dependencies]
kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.11.0"
libc = "0.2.91"
linux-loader = { git = "https://github.com/rust-vmm/linux-loader", rev = "v0.4.0", features = ["bzimage", "elf"] }
vm-memory = { version = "0.7.0", features = ["backend-mmap"] }
vmm-sys-util = "0.15.0"

# vm-device is not yet published on crates.io.
# To make sure that breaking changes to vm-device are not breaking the
# vm-vcpu build, we're using a fixed revision.
vm-device = { git = "https://github.com/rust-vmm/vm-device", rev = "5847f12" }

vm-superio = "0.4.0"
epoll = "4.4.0"
vm-allocator = "0.1.3"
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio.git", rev = "d8ef45f5"}
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio.git", rev = "d8ef45f5"}
event-manager = { version = "0.2.1", features = ["remote_endpoint"] }
log = "0.4.29"
env_logger = "0.11.9"
